Fixed several warnings detected by Intellij IDEA